--- a/my-first-web-page.html
+++ b/my-first-web-page.html
@@ -18,7 +18,7 @@ p{
 h1{
     font-family: cursive;
     color:cornflowerblue;
-    background-color: floralwhite;
+    background-color: lightblue;
 }
 h3{
     font-family:fantasy;
